data/derived/fa15/progs/unify/prog1075.ml.out
Characters 49-54:
  if lt10 n then count;;
                 ^^^^^
Error: This expression has type int but an expression was expected of type
         unit
